Update gradle main class name

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ shadowJar {
 
 application {
     // Change this to your main class.
-    mainClassName = "Duke"
+    mainClassName = "main/Launcher"
 }
 
 run {
